Install llvm-bindings dependency, test that it works

--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node"
+  },
+  "dependencies": {
+    "llvm-bindings": "^0.4.2"
   }
 }
